# freetype-cmake

./: .gitmodules  CMakeLists.txt  Makefile  README.md
freetype-2.10.4/: CMakeLists.txt
freetype-2.10.4/builds/cmake/: findbrotlidec.cmake
freetype-2.10.4/builds/unix/: ftsystem.c
testBuilder/: CMakeLists.txt
